--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,6 +13,37 @@ services:
     networks:
       - chat-app-network
 
+  backend:
+    container_name: djay-chat-app-backend
+    depends_on:
+      - mongodb
+    build:
+      context: ./
+      dockerfile: ./backend/Dockerfile
+    restart: unless-stopped
+    ports:
+      - 3001:3001
+    environment:
+      PORT: 3001
+      MONGO_URI: mongodb://root:example@mongodb:27017
+    networks:
+      - chat-app-network
+
+  frontend:
+    container_name: djay-chat-app-frontend
+    depends_on:
+      - backend
+    build:
+      context: ./
+      dockerfile: ./frontend/Dockerfile
+    restart: unless-stopped
+    ports:
+      - 3000:3000
+    environment:
+      - REACT_APP_BACKEND_URL=http://localhost:3001
+    networks:
+      - chat-app-network
+
 volumes:
   chat-app-dbdata:
 
